DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
[1.2.0 released - 8.14.2007]===================================================
Jul-08-2007 patrick     Debug-enabled code linked against the release runtime
                        on Windows is now named the same as optimized code.
                        The debug DLLs are installed in the "debug"
                        subdirectory. On non-Windows platforms, debug-enabled
                        plug-ins no longer use the "_d" name variation and are
                        installed in the "debug" subdirectory.
                        NEW VERSION: 1.1.30
Jun-26-2007 patrick     Changed the preprocessor identification of debug versus
                        optimized to look for GADGET_DEBUG or JUGGLER_DEBUG
                        instead of _DEBUG (and GADGET_OPT or JUGGLER_OPT
                        instead of _OPT).
                        NEW VERSION: 1.1.29
Jun-15-2007 aronb       Introduced typedefs for known gadget::InputMixer<>
                        instantiations to be used as the base class for device
                        drivers.
                        NEW VERSION: 1.1.28
Jun-15-2007 aronb       Fixed the VRPN driver so that it works correctly in a
                        cluster configuration again.
May-01-2007 patrick     Renamed the x11_pipes property of the display_system
                        config element to pipes.
                        NEW VERSION: 1.1.27
Apr-27-2007 aronb       Changed clustering to be single-threaded.
                        NEW VERSION: 1.1.26
Apr-05-2007 patrick     Made Cocoa the default windowing system on Mac OS X.
Mar-03-2007 patrick     Added support for Cocoa input windows on Mac OS X.
                        NEW VERSION: 1.1.25
Mar-02-2007 patrick     Updated for VPR 1.1.42.
Feb-20-2007 patrick     Initial Unicode support for gadget::KeyEvent.
                        NEW VERSION: 1.1.24